welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:4: error: Missing closing brace `}' assumed here
override def run() { 
^Diagonal:4: error: expected start of definition
override def run() { 
         ^